fix header letter spacing on nav; fix logo and divider alignment on portfolio page descriptions; center vertically portfolio page descriptions in hero

--- a/Portfolio Site Code/HTML/css/portfolio.css
+++ b/Portfolio Site Code/HTML/css/portfolio.css
@@ -104,11 +104,12 @@ table {
 }
 
 .header ul li a {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 10px;
-    font-weight: 900;
-	letter-spacing: 3px;
-	color: #9e9e9e;
+    font-weight: 400;
+    letter-spacing: 2px;
+    color: #9e9e9e;
+    text-transform: uppercase;
 }
 
 .header ul li a.active {
@@ -135,17 +136,18 @@ table {
     padding: 120px;
     position: relative;
     float: left;
-    display: block;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .hero__image {
     max-height: 800px;
     float: right;
-    display: block;
 }
 
 .hero__description, .hero__image {
-    display:inline-block;
     width:50%;
     box-sizing:border-box;
 }
@@ -167,19 +169,14 @@ table {
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    left: 4px;
     margin-bottom: 15px;
-}
-
-.hero__logo--svg {
-    left: 3px;
 }
 
 .hero__divider {
     height: 1px;
     border: none;
     width: 25px;
-    margin: 0 0 15px 5px;
+    margin: 0 0 15px 0;
     background-color: #444444;
 }
 
